[package]
name = "png_rust"
version = "0.1.0"
authors = ["Corentin Rossignon <Corentin.Rossignon@gmail.com>"]
workspace = "../"
edition = "2018"

[lib]
name = "png_rust"
crate-type = ["staticlib", "rlib"]

[dependencies]
crc = "1.8.1"
bitflags = "1.1.0"
paste = "0.1"
enum-primitive-derive = "0.1.2"
num-traits = "0.2.8"
num_enum = "0.2.3"
num-iter = "0.1.39"